--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ a:focus {
 /* Step 3: Write selector/rule property to style all elements when in focus*/
 
 *:focus {
-  border: solid 2px pink;
+  border: solid 2px green;
 }
 
 /* Step 4: Write selector/rule property to style the container */
@@ -214,9 +214,9 @@ first div in the grid  and place it in the grid. */
 
 .text-block {
   margin: auto;
-  text-align: center;
   max-height: 250px;
-  overflow: visible;
+  overflow: scroll;
+  display: grid;
 }
 /* Add your media query here */
 
@@ -225,7 +225,7 @@ first div in the grid  and place it in the grid. */
 
 nav {
   text-align: right;
-  padding: 30px 0px 30px 0px;
+  padding: 30px 0px;
 }
  
   /* Step 10: Write the selector/rule property to update the .container class */
@@ -237,17 +237,17 @@ nav {
   /* Steps 11 and 12: Update the grid-column property of the grid's children (where-needed)*/
 
   .about,
-  .contact,
-  .about-image,
+  .clients,
+  .method-image,
   .contact-image {
-    grid-column: 3/span 2;
+    grid-column: 3 / span 2;
   }
 
   .method,
   .contact,
   .about-image,
   .clients-image {
-    grid-column: 2/span 2;
+    grid-column: 2 / span 2;
   }
 
 }
